# high-performance

cuda/: CMakeLists.txt  util.cuh  util.h
cuda/hello/: hello.txt  main.cpp
cuda/matrix/: host.cpp  host_s.cpp  main.cpp
cuda/matrix/report/: report.tex  template.tex
cuda/matrix_vector/: main.cpp  matrix_gen.h  optimization.cuh
cuda/memory/: main.cpp
cuda/vector/: main.cpp
lab1/: naive_rotate  perf.data  report.tex  svg.sh
lab1/rotate/: naive_rotate.c
lab10/: CMakeLists.txt  util.cuh
lab10/common/: csrspmat.h  spmat.h
lab10/cuda/: csrspmat.h  device_csrspmat.h  main.cpp  util.cuh
lab10/data/: csr_sparse1024-2.mtx  csr_sparse1024.mtx  csr_sparse12288-2.mtx  csr_sparse12288.mtx  csr_sparse128-2.mtx  csr_sparse128.mtx  csr_sparse20-2.mtx  csr_sparse20.mtx  csr_sparse2048-2.mtx  csr_sparse2048.mtx  csr_sparse256-2.mtx  csr_sparse256.mtx  csr_sparse32-2.mtx  csr_sparse32.mtx  csr_sparse4096-2.mtx  csr_sparse4096.mtx  csr_sparse512-2.mtx  csr_sparse512.mtx  csr_sparse64-2.mtx  csr_sparse64.mtx  csr_sparse8-2.mtx  csr_sparse8.mtx  csr_sparse8192-2.mtx  csr_sparse8192.mtx  csr_sparse9216-2.mtx  csr_sparse9216.mtx  matrix_gen.py
lab10/mpi/: cannon.cpp  cannon.h  csr_io.h  dns.cpp  lab10.Hg  main.cpp  mpi4cxx.hpp  mympi.h  triple_mat.h
lab10/result/: 运行时间.xlsx
lab10/result/cuda/: 运行时间.xlsx
lab10/result/mpi/: mpi运行时间.xlsx
lab10/serial/: lab10.Hg  main.cpp
lab2/Trap/: CMakeLists.txt  main  main.c
lab2/report/: lab2.tex
lab3/matrix/: CMakeLists.txt  distribute.h  main.c  matrix.h  matrix_io.h  mympi.h  report.tex  result.mtx  send_recv.h  test.c  type.h  vector.mtx
lab3/matrix/common/: divide.h  matrix_mul.h  mympi.h  type.h
lab3/matrix/dense/: distribute.h  main.c  matrix.h
lab3/matrix/dense/test/: matrix.mtx  vector.mtx
lab3/matrix/sparse/: divide.h  main.c
lab3/matrix/test/: result.mtx
lab4/matrix/: CMakeLists.txt  main.cpp  test_pro_cons.cpp  trainsform.cpp
lab4/matrix/common/: divide.h  divide.hpp  io.hpp  matrix_mul.h  matrix_mul.hpp  msg.h  msg.hpp  mympi.h  threaded_queue.hpp  type.h  type.hpp  vector_io.hpp  vector_manip.hpp
lab4/matrix/data/: test.txt
lab4/matrix/test/: matrix.mtx  matrix2.mtx  vector.mtx
lab5/matrix/: CMakeLists.txt  main.cpp
lab5/matrix/common/: divide.hpp  matrix_mul.hpp  msg.hpp  type.hpp  vector_manip.hpp
lab6/: CMakeLists.txt  get_data.cpp  main.cpp
lab6/common/: divide.hpp  msg.hpp  type.hpp  vector_manip.hpp
lab6/report/: report.tex
lab6/result/: result.csv  result2.csv  result3.xlsx
lab6/test/: psrs_data.txt
