cmake_minimum_required(VERSION 3.12)
project(matrix)

set(CMAKE_CXX_STANDARD 11)
include_directories("D:/Program Files (x86)/Microsoft SDKs/MPI/Include")
include_directories("common")
link_directories("D:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64")
add_executable(matrix main.cpp)
add_executable(pro_cons test_pro_cons.cpp)
target_link_libraries(matrix msmpi pthread)
target_link_libraries(pro_cons pthread)